# malbrot-taller-dispro

./: .gitignore  CMakeLists.txt  README.md
shaders/: malbrot_fragment.glsl  malbrot_vertex.glsl
src/: cli.c  gui.c
src/math/: complex.c  complex.h  matrix.c  matrix.h  vector.c  vector.h
